Prevent image stretching

--- a/kevin.css
+++ b/kevin.css
@@ -2,6 +2,7 @@ body {
     width: 100%;
     height: 100%;
     position: fixed;
+    text-align: center;
 }
 
 button{
@@ -10,8 +11,8 @@ button{
 }
 
 #kevin_image{
-    height: 800px;
-    width: 900px;
+    max-height: 800px;
+    max-width: 900px;
 }
 
 .content {
